--- a/Microservices/submission/deployments/product-service.yaml
+++ b/Microservices/submission/deployments/product-service.yaml
@@ -6,15 +6,15 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: product-service
+      app: product
   template:
     metadata:
       labels:
-        app: product-service
+        app: product
     spec:
       containers:
-        - name: product-service
-          image: garapatimanoj/mskanaka-product-servics:latest
+        - name: product
+          image: garapatimanoj/gkm-product-service:latest
           ports:
             - containerPort: 3001
           env:
@@ -22,11 +22,11 @@ spec:
               value: "3001"
           resources:
             requests:
+              cpu: "100m"
               memory: "128Mi"
-              cpu: "250m"
             limits:
+              cpu: "200m"
               memory: "256Mi"
-              cpu: "500m"
           livenessProbe:
             httpGet:
               path: /
@@ -38,4 +38,4 @@ spec:
               path: /
               port: 3001
             initialDelaySeconds: 5
-            periodSeconds: 3
+            periodSeconds: 5
