--- a/Microservices/gateway-service/Dockerfile
+++ b/Microservices/gateway-service/Dockerfile
@@ -1,7 +1,13 @@
-FROM node:18-alpine
+FROM node:18
+
 WORKDIR /app
+
 COPY package*.json ./
 RUN npm install
+
 COPY . .
+
+ENV PORT=3003
 EXPOSE 3003
-CMD ["node", "app.js"]
+
+CMD ["npm", "start"]
