--- a/Microservices/product-service/Dockerfile
+++ b/Microservices/product-service/Dockerfile
@@ -1,7 +1,13 @@
-FROM node:18-alpine
+FROM node:18
+
 WORKDIR /app
+
 COPY package*.json ./
 RUN npm install
+
 COPY . .
+
+ENV PORT=3001
 EXPOSE 3001
-CMD ["node", "app.js"]
+
+CMD ["npm", "start"]
