--- a/Microservices/submission/ingress/ingress.yaml
+++ b/Microservices/submission/ingress/ingress.yaml
@@ -3,37 +3,36 @@ kind: Ingress
 metadata:
   name: microservices-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: localhost
-    http:
-      paths:
-        - path: /api/users(/|$)(.*)
-          pathType: Prefix
-          backend:
-            service:
-              name: user-service
-              port:
-                number: 3000
-        - path: /api/products(/|$)(.*)
-          pathType: Prefix
-          backend:
-            service:
-              name: product-service
-              port:
-                number: 3001
-        - path: /api/orders(/|$)(.*)
-          pathType: Prefix
-          backend:
-            service:
-              name: order-service
-              port:
-                number: 3002
-        - path: /(.*)
-          pathType: Prefix
-          backend:
-            service:
-              name: gateway-service
-              port:
-                number: 3003
+    - http:
+        paths:
+          - path: /api/users
+            pathType: Prefix
+            backend:
+              service:
+                name: user-service
+                port:
+                  number: 3000
+          - path: /api/products
+            pathType: Prefix
+            backend:
+              service:
+                name: product-service
+                port:
+                  number: 3001
+          - path: /api/orders
+            pathType: Prefix
+            backend:
+              service:
+                name: order-service
+                port:
+                  number: 3002
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: gateway-service
+                port:
+                  number: 3003
